<resources>
    <string name="app_name">Intelligent Mirror</string>

    <string name="name">Name</string>
    <string name="lastname">Last Name</string>
    <string name="password">Password</string>
    <string name="ip">Address IP, e.g.: 192.168.0.1</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="hello">Hello</string>

    <string name="imgDesc">Chosen image of your face</string>
    <string name="choseImg">Chose image</string>
    <string name="confirmPasswd">Confirm password</string>
    <string name="email">Email</string>
    <string name="emailAndNick">Email or nick</string>
    <string name="emailPasswd">Email password</string>
    <string name="emailPasswdConf">Confirm email password</string>
    <string name="nick">Nick</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sebastian Dolata</string>
    <string name="nav_header_subtitle">sebasdolata04@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Personalization</string>
    <string name="menu_raspberry">Raspberry monitor</string>
    <string name="menu_event">Event</string>
    <string name="menu_progressbar">Progress bar</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="date">Click to choose date</string>
    <string name="hour">Click to choose hour</string>
    <string name="event_name">Name the event e.g. Birthday</string>
    <string name="event_days">The event will appear x days before</string>

    <string name="cpu">CPU usage</string>
    <string name="ram">RAM usage</string>
    <string name="temp">Temperature</string>
    <string name="wifi">WiFi</string>

    <string name="galleryItem">Picture made by mirror</string>
    <string name="delete">delete</string>
    <string name="download">download</string>
    <string name="downloadAndDel">download and delete</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="event_btn">save event</string>
    <string name="fragment_account">Account</string>
    <string name="menu_account">Account</string>
    <string name="account_image">Image picked from gallery</string>
    <string name="pick_image">Pick images from gallery</string>
    <string name="send_image">Send images</string>

    <string name="ig">Instagram logo</string>
    <string name="sp">Spotify logo</string>
    <string name="igspEmail">Login to Instagram and Spotify</string>
    <string name="igspPassword">Password to Instagram and Spotify</string>
    <string name="igspSave">Save Instagram and Spotify</string>

    <string name="vm">Virtual mouse</string>
</resources>