<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.jedisebas.inteligentmirror.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <activity
        android:id="@+id/nav_gallery"
        android:name="com.jedisebas.inteligentmirror.ui.gallery.GalleryActivity"
        android:label="@string/menu_gallery"
        tools:layout="@layout/activity_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.jedisebas.inteligentmirror.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_raspberry"
        android:name="com.jedisebas.inteligentmirror.ui.raspberry.RaspberryFragment"
        android:label="@string/menu_raspberry"
        tools:layout="@layout/fragment_raspberry" />

    <fragment
        android:id="@+id/nav_event"
        android:name="com.jedisebas.inteligentmirror.ui.event.EventFragment"
        android:label="@string/menu_event"
        tools:layout="@layout/fragment_event" />

    <activity
        android:id="@+id/nav_account"
        android:name="com.jedisebas.inteligentmirror.ui.account.AccountActivity"
        android:label="@string/menu_account"
        tools:layout="@layout/activity_account" />
</navigation>