<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/signnameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/name"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/signlastnameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/lastname"
            android:ems="10"
            android:hint="@string/lastname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/signpasswdEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/password"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/signconfEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/confirmPasswd"
            android:ems="10"
            android:hint="@string/confirmPasswd"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/signemailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/email"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/signemailpasswdEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/emailPasswd"
            android:ems="10"
            android:hint="@string/emailPasswd"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/signemailpasswdconfEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/emailPasswdConf"
            android:ems="10"
            android:hint="@string/emailPasswdConf"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/signnickEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/nick"
            android:ems="10"
            android:hint="@string/nick"
            android:inputType="textPersonName" />

<!--        <EditText-->
<!--            android:id="@+id/signaddressEt"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:autofillHints="@string/ip"-->
<!--            android:ems="10"-->
<!--            android:hint="@string/ip"-->
<!--            android:inputType="date" />-->

        <Button
            android:id="@+id/signupBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup" />
    </LinearLayout>
</ScrollView>