<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dateTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textAlignment="center"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/hourTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hour"
            android:textAlignment="center"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/eventEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/event_name"
            android:ems="10"
            android:hint="@string/event_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/howmanydaysEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/event_days"
            android:ems="10"
            android:hint="@string/event_days"
            android:inputType="number"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/eventBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_btn" />

    </LinearLayout>
</ScrollView>