<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="312dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:contentDescription="@string/ig"
            app:srcCompat="@drawable/ic_instagram" />

<!--        <ImageView-->
<!--            android:id="@+id/imageView3"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_weight="1"-->
<!--            android:contentDescription="@string/sp"-->
<!--            app:srcCompat="@drawable/ic_spotify" />-->
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <EditText
            android:id="@+id/accountEmailEt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:inputType="textEmailAddress"
            android:hint="@string/igspEmail"
            android:autofillHints="@string/igspEmail"
            tools:ignore="LabelFor" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <EditText
            android:id="@+id/accountPasswordEt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:inputType="textPassword"
            android:hint="@string/igspPassword"
            android:autofillHints="@string/igspPassword"
            tools:ignore="LabelFor" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/igspSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/igspSave" />
    </TableRow>

</TableLayout>